// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots organisms/BeatMeter Standard Bar 1`] = `
.c0 {
  height: 60px;
  background-color: black;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

<div
  class="c0"
/>
`;

exports[`Storyshots organisms/BeatMeter Standard Circle 1`] = `
.c0 {
  position: absolute;
  height: 50px;
  width: 50px;
  border: 1px solid #3fbfa1;
  border-radius: 50%;
  left: calc(50% - 25px);
  z-index: 3;
  box-shadow: 0px 0px 9px 2px #3fbfa1;
}

<div
  class="c0"
/>
`;

exports[`Storyshots organisms/BeatMeter Standard Dot 1`] = `
.c0 {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-timing-function: ease;
  animation-timing-function: ease;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  display: block;
}

.c1 {
  position: absolute;
  height: 10px;
  width: 10px;
  border-radius: 50%;
  z-index: 6;
  background: rgb(253,255,245);
  box-shadow: 0px 0px 24px 13px #3fbfa1;
}

<div
  class="c0 c1"
  direction="normal"
  display="block"
/>
`;

exports[`Storyshots organisms/BeatMeter Standard Flash 1`] = `
.c0 {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-timing-function: ease;
  animation-timing-function: ease;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  display: block;
}

.c1 {
  position: absolute;
  height: 50px;
  width: 50px;
  border-radius: 50%;
  left: calc(50% - 25px);
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  border: 1px solid #3fbfa1;
  background-color: #3fbfa1;
  -webkit-animation-name: llVaGI;
  animation-name: llVaGI;
  -webkit-animation-duration: 0.25s;
  animation-duration: 0.25s;
  -webkit-animation-delay: -Infinitys;
  animation-delay: -Infinitys;
  z-index: 3;
}

<div
  class="c0 c1"
  direction="normal"
  display="block"
/>
`;

exports[`Storyshots organisms/BeatMeter Standard HR 1`] = `
.c0 {
  border-width: 1px 0;
  border-color: #3fbfa1;
  width: 100%;
  position: absolute;
  z-index: 1;
  box-shadow: 0px 0px 24px 3px #3fbfa1;
}

<hr
  class="c0"
/>
`;
